--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Changelog</h1>
+    <h3>Here's everything we have shipped in the past few days</h3>
+    <div>
+        <div id="linha-vertical"></div>
+        <ul>
+            <li>
+                <span>September 3, 2024</span>
+                <span></span>
+                <span>Announcing Proejcts on Frontend Roadmap</span>
+            </li>
+            <li>
+                <span>August 28 2024</span>
+                <span></span>
+                <span>Build your learning habits with learning streaks</span>
+            </li>
+            <li>
+                <span>August 25, 2024</span>
+                <span></span>
+                <span>Git and GitHub Roadmap</span>
+            </li>
+            <li>
+                <span>August 22, 2024</span>
+                <span></span>
+                <span>Submit your project solution and get feedback</span>
+            </li>
+            <li>
+                <span>August 15, 2024</span>
+                <span></span>
+                <span>Backend Project Ideas</span>
+            </li>
+            <li>
+                <span>August 10, 2024</span>
+                <span></span>
+                <span>Redis roadmap</span>
+            </li>
+            <li>
+                <span>August 1, 2024</span>
+                <span></span>
+                <span>Changelog page to help you stay in the loop</span>
+            </li>
+        </ul>
+    </div>
+    <button><a href="#">Visit Complete Changelog</a></button>
 </body>
 </html>
