adição da tag meta description e keywords

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="O objetivo do projeto é aprender sobre posicionamento
+                                      e layout em CSS através da criação de um componente
+                                      simples que exiba um changelog, contendo as características
+                                      propostas no projeto 'Changelog Component'.">
+    <meta name="keywords" content="CSS, Changelog Component, Projeto">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
